# AlphaZero-Gomoku-Lab

./: .gitignore  CONTRIBUTING.md  README.md  gui_play.py  human_play.py  pyproject.toml  refactor.py  train.py
.github/workflows/: ci.yml  pytorch.yml
alphazero_gomoku/: __init__.py  __main__.py  cli.py  game.py  mcts_alphaZero.py  policy_value_net_pytorch.py
alphazero_gomoku/evaluation/: __init__.py  arena.py  config.py  neural.py  players.py  promotion.py  stats.py
alphazero_gomoku/gumbel/: __init__.py  benchmark.py  math.py  player.py  search.py
alphazero_gomoku/legacy/: __init__.py
alphazero_gomoku/training/: __init__.py  benchmark.py  checkpoint.py  config.py  inference.py  metrics.py  replay_buffer.py  reproducibility.py  self_play.py  trainer.py
benchmarks/: README.md  gumbel_vs_puct_smoke.json  smoke_cpu.json
configs/: arena_6x6.toml  arena_smoke.toml  compare_search_smoke.toml  train_6x6.toml  train_gumbel_smoke.toml  train_smoke.toml
docs/: EVALUATION_ARENA.md  GUMBEL_ALPHAZERO.md  PYTORCH_BACKEND.md  ROADMAP.md  SCALABLE_SELF_PLAY.md  TRAINING.md
docs/superpowers/plans/: 2026-07-18-gumbel-alphazero.md
reports/: arena_smoke.json
tests/: test_evaluation_arena.py  test_evaluation_cli.py  test_evaluation_neural.py  test_game.py  test_gumbel_benchmark.py  test_gumbel_math.py  test_gumbel_search.py  test_gumbel_training.py  test_policy_value_net_pytorch.py  test_rectangular_board.py  test_scalable_self_play.py  test_training_checkpoint.py  test_training_infrastructure.py  test_training_pipeline.py
(+1 files in other folders)
