[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "alphazero-gomoku-lab"
version = "0.1.0"
description = "A modern, reproducible AlphaZero self-play lab for Gomoku"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "AlphaZero Gomoku contributors" }]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
gui = ["pygame>=2.5"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[project.scripts]
gomoku = "alphazero_gomoku.cli:main"

[tool.setuptools.packages.find]
include = ["alphazero_gomoku*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
